Redmine issue 995: Specimen Details Edit Dialog Styles; Part section styling follow-up -- making the blocks more consistent. Background-color slightly more transparent for contrast enhancement

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -176,7 +176,8 @@ table td .small {
 .highlight_media {border: 2px solid #a51c30;background-color:#E2E6EC; }
 
 .part_occurrence_head {
-	background-color: #bff1f1; 
+	/*background-color: #bff1f1;*/
+	background-color: #d4f6f685;
 } 
 .part_occurrence {
 	background-color: #d4f6f6; 
